# StableOps

./: .gitignore  README.md  app.json  package-lock.json  package.json
app/: create-post.tsx
app/(tabs)/: index.tsx
python_prototype/: .env.example  README.md  app.py  pyproject.toml  requirements.txt
python_prototype/data/: artifacts.json
python_prototype/stableops/: __init__.py  schemas.py  workflows.py
python_prototype/stableops/integrations/: __init__.py  email.py  llm.py  storage.py
python_prototype/stableops/prompts/: __init__.py  grant.py  newsletter.py  social_post.py
